--- a/Download/Android/Apk+Obb/GTAV/CSS/app.css
+++ b/Download/Android/Apk+Obb/GTAV/CSS/app.css
@@ -65,7 +65,7 @@ footer {
 #download{
     position: relative;
     text-align: center;
-    font-size: x-large;
+    font-size: large;
     font-weight: bolder;
     outline: none;
     border: none;
